--- a/SAMPLE.env
+++ b/SAMPLE.env
@@ -1,1 +1,1 @@
-MNEMONIC = 'YOUR MNEMONIC SEED PHRASE HERE'
+MNEMONIC = 'lion plunge flip merit gallery quit half senior vicious blue crucial tooth'
